--- a/charts-chartjs.html
+++ b/charts-chartjs.html
@@ -499,6 +499,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.0.0-beta2/Chart.min.js"></script>
         <!-- Chart JS -->
         <script src="assets/plugins/chart.js/chart.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
         <!-- CHART.JS MAIN CODE HERE -->
         <script>
         !function($) {
@@ -766,7 +767,7 @@
                                 display: true
                             }
                         ]
-                    }
+                    },
 
                 };
                 this.respChart($("#bar"),'Bar',barChart, barOpts);
